src/objects/InboundApprovalEmail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Email_Message__c</fullName>
        <label>Email Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>InboundApprovalEmail</label>
</CustomObject>